--- a/design.html
+++ b/design.html
@@ -106,6 +106,9 @@
                         </div>
                     </div>
                 </div>
+                
+                <br>
+                <p class="text--gray small mb0">This page is under development.</p>
             </main>
                         <!-- Footer -->
             <footer class="border--top pt1 pb1">
